CARRY: Added Metrics service

--- a/manifests/base/kustomization.yaml
+++ b/manifests/base/kustomization.yaml
@@ -7,3 +7,6 @@ resources:
   - ./rbac/service-account.yaml
   - service.yaml
   - deployment.yaml
+
+patches:
+  - path: training-operator-metrics.yaml
