--- a/.tekton/odh-training-operator-v2-16-push.yaml
+++ b/.tekton/odh-training-operator-v2-16-push.yaml
@@ -402,7 +402,7 @@ spec:
       - input: $(params.skip-checks)
         operator: in
         values:
-        - "false"
+        - "true"
     - name: clair-scan
       params:
       - name: image-digest
@@ -424,7 +424,7 @@ spec:
       - input: $(params.skip-checks)
         operator: in
         values:
-        - "false"
+        - "true"
     - name: ecosystem-cert-preflight-checks
       params:
       - name: image-url
@@ -491,7 +491,7 @@ spec:
       - input: $(params.skip-checks)
         operator: in
         values:
-        - "false"
+        - "true"
     - name: apply-tags
       params:
       - name: IMAGE
