--- a/.tekton/odh-training-operator-v2-16-push.yaml
+++ b/.tekton/odh-training-operator-v2-16-push.yaml
@@ -402,7 +402,7 @@ spec:
       - input: $(params.skip-checks)
         operator: in
         values:
-        - "true"
+        - "false"
     - name: clair-scan
       params:
       - name: image-digest
