--- a/.tekton/odh-training-operator-v2-16-push.yaml
+++ b/.tekton/odh-training-operator-v2-16-push.yaml
@@ -286,6 +286,7 @@ spec:
         - release='$(tasks.clone-repository.results.commit-timestamp)'
         - git.url=$(params.git-url)
         - git.commit=$(params.revision)
+        - io.openshift.tags="odh-training-operator"
       - name: SOURCE_ARTIFACT
         value: $(tasks.prefetch-dependencies.results.SOURCE_ARTIFACT)
       - name: CACHI2_ARTIFACT
