--- a/.tekton/odh-training-operator-v2-16-push.yaml
+++ b/.tekton/odh-training-operator-v2-16-push.yaml
@@ -283,10 +283,10 @@ spec:
         value:
         - version=v2.16.0
         - url=$(params.git-url)
-        - release='$(tasks.clone-repository.results.commit-timestamp)'
+        - release=$(tasks.clone-repository.results.commit-timestamp)
         - git.url=$(params.git-url)
         - git.commit=$(params.revision)
-        - io.openshift.tags="odh-training-operator"
+        - io.openshift.tags=odh-training-operator
       - name: SOURCE_ARTIFACT
         value: $(tasks.prefetch-dependencies.results.SOURCE_ARTIFACT)
       - name: CACHI2_ARTIFACT
