--- a/.tekton/odh-training-operator-v2-18-push.yaml
+++ b/.tekton/odh-training-operator-v2-18-push.yaml
@@ -31,7 +31,8 @@ spec:
   - name: path-context
     value: .
   - name: prefetch-input
-    value: '{"type": "gomod", "path": "."}'
+    value: |
+      [{"type": "gomod"}, {"type": "rpm"}]
   pipelineSpec:
     description: |
       This pipeline is ideal for building container images from a Containerfile while reducing network traffic.
