--- a/.tekton/odh-training-operator-v2-18-push.yaml
+++ b/.tekton/odh-training-operator-v2-18-push.yaml
@@ -237,6 +237,8 @@ spec:
       params:
       - name: input
         value: $(params.prefetch-input)
+      - name: dev-package-managers
+        value: "true"
       - name: SOURCE_ARTIFACT
         value: $(tasks.clone-repository.results.SOURCE_ARTIFACT)
       - name: ociStorage
