--- a/.tekton/test-go-push.yaml
+++ b/.tekton/test-go-push.yaml
@@ -27,6 +27,8 @@ spec:
     value: build/images/training-operator/Dockerfile.konflux
   - name: path-context
     value: .
+   - name: prefetch-input
+    value: '{"type": "gomod", "path": "."}'
   pipelineSpec:
     description: |
       This pipeline is ideal for building container images from a Containerfile while maintaining trust after pipeline customization.
@@ -76,7 +78,7 @@ spec:
       description: Skip checks against built image
       name: skip-checks
       type: string
-    - default: "false"
+    - default: "true"
       description: Execute the build with network isolation
       name: hermetic
       type: string
