add pipelineref authentication

--- a/.tekton/odh-training-operator-v2-17-pull-request.yaml
+++ b/.tekton/odh-training-operator-v2-17-pull-request.yaml
@@ -46,6 +46,10 @@ spec:
       value: pipelines-poc
     - name: pathInRepo
       value: pipelines/container-build.yaml
+    - name: token
+      value: pipelines-as-code-secret
+    - name: tokenKey
+      value: password
   taskRunTemplate: {}
   workspaces:
   - name: git-auth
