--- a/manifests/component_metadata.yaml
+++ b/manifests/component_metadata.yaml
@@ -1,4 +1,4 @@
 releases:
   - name: Kubeflow Training Operator
     version: "1.9.0"
-    repoUrl: https://github.com/kubeflow/training-operator
+    repoUrl: https://github.com/kubeflow/trainer
