--- a/.tekton/odh-training-operator-v2-21-push.yaml
+++ b/.tekton/odh-training-operator-v2-21-push.yaml
@@ -25,6 +25,15 @@ spec:
     value: '{{source_url}}'
   - name: revision
     value: '{{revision}}'
+  - name: target-branch
+    value: '{{target_branch}}'
+  - name: additional-tags
+    value: 
+    - '{{target_branch}}-{{revision}}'
+  - name: additional-labels
+    value: 
+    - version=v2.21.0
+    - io.openshift.tags=odh-training-operator
   - name: output-image
     value: quay.io/rhoai/odh-training-operator-rhel8:{{target_branch}}
   - name: dockerfile
