--- a/.tekton/odh-training-operator-v2-21-push.yaml
+++ b/.tekton/odh-training-operator-v2-21-push.yaml
@@ -49,7 +49,7 @@ spec:
     - name: url
       value: https://github.com/red-hat-data-services/rhoai-konflux-tasks.git
     - name: revision
-      value: parameterize-everything
+      value: main
     - name: pathInRepo
       value: pipelines/container-build.yaml
   taskRunTemplate: {}
