FIPS changes with UBI9 upgrade

--- a/rpms.in.yaml
+++ b/rpms.in.yaml
@@ -1,10 +1,7 @@
+arches:
+- x86_64
 contentOrigin:
   repofiles:
     - ubi.repo
 packages:
-  - gcc
-  - make
-  - openssl-devel
   - bind-utils
-context:
-  containerfile: ./build/images/training-operator/Dockerfile.konflux
