--- a/.tekton/odh-training-operator-v2-24-push.yaml
+++ b/.tekton/odh-training-operator-v2-24-push.yaml
@@ -8,7 +8,7 @@ metadata:
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     build.appstudio.openshift.io/build-nudge-files: "build/operator-nudging.yaml"
     pipelinesascode.tekton.dev/on-cel-expression: |
-      event == "push" 
+      event == "push"
       && target_branch == "rhoai-2.24"
       && ( !".tekton/**".pathChanged() || ".tekton/odh-training-operator-v2-24-push.yaml".pathChanged() )
   creationTimestamp:
@@ -49,6 +49,7 @@ spec:
   - name: build-platforms
     value:
     - linux/x86_64
+    - linux/ppc64le
   pipelineRef:
     resolver: git
     params:
